--- a/tajam/src/style/partials/_fonts.scss
+++ b/tajam/src/style/partials/_fonts.scss
@@ -1,48 +1,48 @@
 // Fonts
 @font-face {
   font-family: 'HammersmithOne';
-  src: url('/webfonts/HammersmithOne-Regular.ttf');
+  src: url('../webfonts/HammersmithOne-Regular.ttf');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'PlayfairDisplay';
-  src: url('/webfonts/PlayfairDisplay-Regular.ttf');
+  src: url('../webfonts/PlayfairDisplay-Regular.ttf');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'PlayfairDisplay';
-  src: url('/webfonts/PlayfairDisplay-Bold.ttf');
+  src: url('../webfonts/PlayfairDisplay-Bold.ttf');
   font-weight: bold;
 }
 
 @font-face {
   font-family: 'PlayfairDisplay';
-  src: url('/webfonts/PlayfairDisplay-Black.ttf');
+  src: url('../webfonts/PlayfairDisplay-Black.ttf');
   font-weight: bolder;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/webfonts/Roboto-Thin.ttf');
+  src: url('../webfonts/Roboto-Thin.ttf');
   font-weight: 200;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/webfonts/Roboto-Light.ttf');
+  src: url('../webfonts/Roboto-Light.ttf');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/webfonts/Roboto-Regular.ttf');
+  src: url('../webfonts/Roboto-Regular.ttf');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/webfonts/Roboto-Black.ttf');
+  src: url('../webfonts/Roboto-Black.ttf');
   font-weight: bolder;
 }
