--- a/comfort-city/assets/css/font.css
+++ b/comfort-city/assets/css/font.css
@@ -14,6 +14,12 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url(../fonts/Roboto-SemiBold.ttf) format('truetype');
-  font-weight: 600;
+  src: url(../fonts/Roboto-Medium.ttf) format('truetype');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url(../fonts/Roboto-Bold.ttf) format('truetype');
+  font-weight: 700;
 }
