Add: import header component, classes for grid and other support classes

--- a/comfort-city/assets/css/general.css
+++ b/comfort-city/assets/css/general.css
@@ -7,6 +7,7 @@
 */
 
 @import './components/page-top-nav.css';
+@import './components/page-header.css';
 
 
 
@@ -30,6 +31,31 @@
 |---------------
 */
 
+.row {
+
+  /* Display */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+}
+
+._flex-center { justify-content: center }
+
+._flex-between { justify-content: space-between }
+
+.col {
+
+  /* Display */
+  display: flex;
+  flex-direction: column;
+
+  /* Dimension */
+  padding-left: var(--s-inner-gap);
+  padding-right: var(--s-inner-gap);
+
+}
+
 .page-container {
 
   /* Dimension */
@@ -41,3 +67,43 @@
   padding-right: var(--s-inner-gap);
 
 }
+
+
+
+/*
+|---------------
+|   Dimension
+|---------------
+*/
+
+._w-100 { width: 100% }
+
+._m-0 { margin: 0 }
+
+._mt-0 { margin-top: 0 }
+._mt-1 { margin-top: 0.25em }
+._mt-2 { margin-top: 0.75em }
+._mt-3 { margin-top: 1.25em }
+._mt-4 { margin-top: 1.75em }
+._mt-5 { margin-top: 2.25em }
+
+._mb-0 { margin-bottom: 0 }
+._mb-1 { margin-bottom: 0.25em }
+._mb-2 { margin-bottom: 0.75em }
+._mb-3 { margin-bottom: 1.25em }
+._mb-4 { margin-bottom: 1.75em }
+._mb-5 { margin-bottom: 2.25em }
+
+._ml-0 { margin-left: 0 }
+
+._mr-0 { margin-right: 0 }
+
+
+
+/*
+|---------------
+|     Text
+|---------------
+*/
+
+._text-right { text-align: right }
