Add: styles for sections and others

--- a/comfort-city/assets/css/general.css
+++ b/comfort-city/assets/css/general.css
@@ -8,6 +8,7 @@
 
 @import './components/page-top-nav.css';
 @import './components/page-header.css';
+@import './components/request-card.css';
 
 
 
@@ -56,10 +57,19 @@
 
 }
 
+.col._no-gap {
+
+  /* Dimension */
+  padding-left: 0px;
+  padding-right: 0px;
+
+}
+
 .page-container {
 
   /* Dimension */
   max-width: 1140px;
+  min-width: var(--s-page-min-width);
 
   margin-left: auto;
   margin-right: auto;
@@ -78,25 +88,48 @@
 
 ._w-100 { width: 100% }
 
-._m-0 { margin: 0 }
+._m-0 { margin: 0em }
 
-._mt-0 { margin-top: 0 }
+._mt-0 { margin-top: 0em }
 ._mt-1 { margin-top: 0.25em }
 ._mt-2 { margin-top: 0.75em }
 ._mt-3 { margin-top: 1.25em }
 ._mt-4 { margin-top: 1.75em }
 ._mt-5 { margin-top: 2.25em }
 
-._mb-0 { margin-bottom: 0 }
+._mb-0 { margin-bottom: 0em }
 ._mb-1 { margin-bottom: 0.25em }
-._mb-2 { margin-bottom: 0.75em }
-._mb-3 { margin-bottom: 1.25em }
-._mb-4 { margin-bottom: 1.75em }
-._mb-5 { margin-bottom: 2.25em }
+._mb-2 { margin-bottom: 0.5em }
+._mb-3 { margin-bottom: 0.75em }
+._mb-4 { margin-bottom: 1em }
+._mb-5 { margin-bottom: 1.5em }
 
-._ml-0 { margin-left: 0 }
+._ml-0 { margin-left: 0em }
+._mr-0 { margin-right: 0em }
 
-._mr-0 { margin-right: 0 }
+._mx-0 {
+
+  /* Dimension */
+  margin-left: 0em;
+  margin-right: 0em;
+
+}
+
+._my-0 {
+
+  /* Dimension */
+  margin-top: 0em;
+  margin-bottom: 0em;
+
+}
+
+._my-2 {
+
+  /* Dimension */
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+
+}
 
 
 
@@ -107,3 +140,62 @@
 */
 
 ._text-right { text-align: right }
+
+
+
+/*
+|---------------
+|    Section
+|---------------
+*/
+
+#first-section {
+
+  /* Local Vars */
+  --fake-padding: var(--s-inner-gap);
+
+}
+
+.page-section {
+
+  /* Dimension */
+  margin-top: calc( -1 * var(--fake-padding, 0) );
+  padding-top: calc( var(--s-section-padding) + var(--fake-padding, var(--s-inner-gap)) );
+  padding-bottom: var(--s-section-padding);
+
+}
+
+.page-section__heading { text-align: center }
+
+.page-section__header {
+
+  /* Positioning */
+  position: relative;
+
+  /* Dimension */
+  margin-bottom: 1.25em;
+
+}
+
+.page-section__header::after {
+
+  content: '';
+
+  /* Positioning */
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  bottom: -0.2em;
+
+  /* Dimension */
+  min-width: 75px;
+  width: 15%;
+  height: 2px;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  /* Appearance */
+  background-color: var(--c-secondary);
+
+}
