--- a/merkury/assets/css/style.css
+++ b/merkury/assets/css/style.css
@@ -14,6 +14,7 @@
 @import url(./components/card_opportunity.css);
 @import url(./components/card_pricing.css);
 @import url(./components/card_work.css);
+@import url(./components/menu-dots.css);
 @import url(./components/ul.css);
 
 
