--- a/brella/assets/css/sections/footer.css
+++ b/brella/assets/css/sections/footer.css
@@ -1,9 +1,21 @@
+.footer_height {
+  height: 80.9rem;
+}
+
 .footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+
   padding: 10rem 0 5rem;
 
   color: var(--white);
 
   background-color: var(--primary-dark);
+
+  z-index: -1;
 }
 
 .footer__top {
