Revert "Update: --font-size variable from 5209vw to 5322vw"
This reverts commit 2f99c77279ae651d1d26aae8473fd24dfda5f1e7.

There was my mistake when change --font-size variable. old value was pretty good

So I also change font-size direct value in surface landing to the variable value

--- a/surface/assets/css/vars.css
+++ b/surface/assets/css/vars.css
@@ -1,9 +1,13 @@
 :root {
+
+    /* Base font size 10px (62.5%) */
+    --font-size: .5209vw;
+
     /* Colors */
     --accent-light: #a496ca;
     --accent: #5e42b0;
     --accent-dark: #0a0e34;
-    
+
     --muted: #e7e7e7;
     --muted-2: #c1c1c1;
     --muted-3: #f6f4fa;
