Update Exodus CW: fix buttons and testimonial's cards

--- a/exodus-cw/assets/css/components/button.css
+++ b/exodus-cw/assets/css/components/button.css
@@ -1,6 +1,4 @@
 .button {
-  position: relative;
-
   display: inline-block;
 
   padding: 1.5rem 4rem;
@@ -16,21 +14,6 @@
   cursor: pointer;
   overflow: hidden;
   transition: box-shadow .15s ease;
-}
-
-.button::after {
-  content: '';
-
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  border-width: .2rem;
-  border-style: solid;
-  border-image: var(--accent-gradient);
-  border-image-slice: 1;
 }
 
 .button:hover {
@@ -49,4 +32,9 @@
   background-clip: text;
   -webkit-text-fill-color: transparent;
   border-radius: 0rem;
+}
+
+.button_light {
+  border: .2rem solid var(--accent-2);
+  border-radius: .5rem;
 }
